# infra-template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  backlog.md  codex.yaml  docker-compose.yml  environment.yaml  pyproject.toml  pytest.ini  requirements-test.txt
.ci/env/: README.md  docker.json  kernel.json
.codex/: AGENTS.md  startup.sh
.githooks/: pre-push
.github/workflows/: auto-pr.yml  ci.yml
ai/: coder.py  docsmith.py  planner.py  reviewer.py  runner.py  tester.py
ai/memory/runs/: README.md
infrastructure/: __init__.py
ops/docker/: loki-config.yaml  otel-config.yaml  otel.yml
postgres-init/: 01-init.sql  02-listener.sh
scripts/: await-ci.sh  setup.sh
src/: main.py
src/features/auth/api/: __init__.py
src/features/orders/api/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/clients/: montfort.py
stub.egg-info/: README.md
tests/: conftest.py  test_auth.py  test_auth_api.py  test_montfort_client.py  test_orders.py  test_smoke.py
