[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-template"
version = "0.1.0"
description = "Infrastructure scaffolding extracted from OMA-ci-fast"
readme = ""
requires-python = ">=3.11"

[tool.setuptools]
packages = ["infrastructure"]
package-dir = {"" = "src"}
